Solved all additional functionalities except for the comments including an extra Atom Endpoint, CRUD functionality for album images either loaded from local disc or pointing to an external url and added CSRF tokens for POST requests in forms using the flask SeaSurf extension. Also solved smaller design issues.

--- a/static/styles.css
+++ b/static/styles.css
@@ -139,12 +139,16 @@ p {
 
  .collection-list {
  	background-color: #F0F0F0;
- 	padding: 20px;
+ 	padding-top: 8px;
+ 	padding-bottom: 15px;
+ 	margin: 3px;
 u }
 
  .collection-list:hover {
  	background-color: #e1e17f;
- 	padding: 20px;
+ 	padding-top: 8px;
+ 	padding-bottom: 15px;
+ 	margin: 3px;
 }
 
 .album {
@@ -175,6 +179,10 @@ u }
 	color: #000;
 	font-weight: 400;
 	margin-top: -20px;
+}
+
+.cover-image img {
+	width: 120px;
 }
 
 .flash {
