--- a/templates/deleteCollection.html
+++ b/templates/deleteCollection.html
@@ -14,6 +14,7 @@
 <form action="#" method = 'post' style="display: inline;">
 	<button type="submit" class="btn btn-default delete" id="submit" type="submit">
 	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button>
+	<input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 </form>
 <a href = '{{url_for('indexCollections')}}'>
 	<button class="btn btn-default delete">
