--- a/templates/header.html
+++ b/templates/header.html
@@ -1,14 +1,14 @@
 <div class="row top-menu">
-	<div class="col-md-6">
+	<div class="col-sm-6">
 		<a href="{{url_for('indexCollections')}}">
 			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>Show All Collections
 		</a>
 	</div>
-	<div class="col-md-6 text-right">
+	<div class="col-sm-6 text-right">
 		{% if 'username' not in session %}
 			<a href="{{url_for('showLogin')}}">Click Here to Log in</a>
 		{% else %}
 			<a href="{{url_for('disconnect')}}">Disconnect</a>
 		{% endif %}
 	</div>
-</div>
+</div>	
