--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+		{% block atom_feed %}
+		{% endblock %}
 	</head>
 	<body>
 		<div class="container">
