--- a/templates/newAlbum.html
+++ b/templates/newAlbum.html
@@ -1,6 +1,22 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+	<!-- Dynamically showing different form input fields depending on chosen radio select for album cover. -->
+	<script type="text/javascript">
+		function source_select() {
+		    if (document.getElementById('local_source').checked) {
+		        document.getElementById('ifLocal').style.display = 'block';
+		       	document.getElementById('ifURL').style.display = 'none';
+		    } else if (document.getElementById('url_source').checked) {
+		        document.getElementById('ifURL').style.display = 'block';
+		       	document.getElementById('ifLocal').style.display = 'none';
+		    } else if (document.getElementById('no_cover').checked) {
+		        document.getElementById('ifLocal').style.display = 'none';
+		       	document.getElementById('ifURL').style.display = 'none';
+		    }
+		}
+	</script>
+
 	<div class="row divider green">
 		<div class="col-md-12"></div>
 	</div>
@@ -11,12 +27,12 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-1 padding-top">
-			<form action="#" method = "post" style="display: inline;">
+			<form action="#" method = "post" enctype=multipart/form-data style="display: inline;">
 				<div class="form-group" style="display: inline;">
-					<label for="name">Name:</label>
-					<input type ="text" maxlength="250" class="form-control" name="name"placeholder="Name of the Album">
 					<label for="artist">Artist:</label>
-					<input type ="text" maxlength="250" class="form-control" name="artist"placeholder="Name of the Artist">
+					<input type ="text" maxlength="250" class="form-control" name="artist" placeholder="Name of the Artist">
+					<label for="name">Album:</label>
+					<input type ="text" maxlength="250" class="form-control" name="name" placeholder="Name of the Album">
 					<label for="genre">Genre:</label>
 					<div class="radio">
 					  <label>
@@ -44,9 +60,41 @@
 					</div>
 					<label for="description">Description:</label>
 					<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the Album"></textarea>
+      				
+      				<label for="image_source">Add Album Cover:
+      				<div class="radio">
+      					<label>
+      						<input type="radio" onclick="javascript:source_select();" name="image_source" id="no_cover" value="None" checked/>No Album Cover
+						</label>
+					</div>
+
+      				<div class="radio">
+      					<label>
+      						<input type="radio" onclick="javascript:source_select();" name="image_source" id="local_source" value="local"/>Upload Image-File
+						</label>
+					</div>
+					<div id="ifLocal" style="display:none">
+						<label for=file>
+							<input type=file name=file>
+						</label>
+					</div>
+
+					<div class="radio">
+      					<label>
+      						<input type="radio" onclick="javascript:source_select();" name="image_source" id="url_source" value="url"/>Paste in Image-URL
+						</label>
+					</div>
+					<div id="ifURL" style="display:none">
+						<label for="URL">
+							<input type ="text" maxlength="250" class="form-control" name="URL" placeholder="URL of the cover image">
+						</label>
+					</div>				
+
 					<button type="submit" class="btn btn-default" id="submit" type="submit">
-					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Create</button>
 				</div>
+				<!-- attach the CSRF cookie that is set to a random value --> 
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 			</form>
 			<a href = '{{url_for('indexAlbums', collection_id=collection_id)}}'>
 				<button class="btn btn-default delete">
