--- a/templates/newCollection.html
+++ b/templates/newCollection.html
@@ -17,8 +17,9 @@
 					<input type ="text" class="form-control" maxlength="100" name="name">
 					<div class="padding-bottom"></div>
 					<button type="submit" class="btn btn-default" id="submit" type="submit">
-					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Create</button>
+					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Create</button>
 				</div>
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 			</form>
 			<a href = '{{url_for('indexCollections')}}'>
 				<button class="btn btn-default delete">
