--- a/templates/publicAlbums.html
+++ b/templates/publicAlbums.html
@@ -9,7 +9,7 @@
 	</div>
 	<div class="row banner main collection">
 		<div class="col-sm-11 col-sm-offset-1 padding-none">
-			<h1>{{ collection.name }}
+			<h1>{{collection.name}}
 				<figure class="creator">
 					<img src="{{ creator.picture }}">
 					<figcaption>{{ creator.name }}</figcaption>
@@ -29,36 +29,12 @@
 	        {% endif %}
 	    {% endwith %}
 	</div>
-
 	<div class="row">
 		<div class="col-sm-12 text-right">
 			<p>Available Endpoints: <a href='{{url_for('collectionJSON', collection_id = collection.id)}}'>JSON</a> or
 			<a href='{{url_for('collectionATOM', collection_id = collection.id)}}'>Atom</a></p>
 		</div>
 	</div>
-
-	<div class="row padding-top padding-bottom">
-		<div class="col-sm-1"></div>
-		<div class="col-sm-10 padding-none">
-			<a href="{{url_for('editCollection', collection_id = collection.id)}}">
-				<button class="btn btn-default" id="new-album">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Collection
-				</button>
-			</a>
-			<a href="{{url_for('newAlbum', collection_id = collection.id)}}">
-				<button class="btn btn-default" id="new-album">
-					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>Add Album
-				</button>
-			</a>
-			<a href="{{url_for('deleteCollection', collection_id = collection.id )}}">
-				<button class="btn btn-default delete" id="delete-collection">
-					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Collection
-				</button>
-			</a>
-		</div>
-		<div class="col-sm-1"></div>
-	</div>
-	
 	{% if albums !=[] %}	
 		<div class="row">
 			<div class="col-sm-1"></div>
@@ -81,11 +57,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-6 text-left">
-								<a href='{{url_for('editAlbum', collection_id = collection.id, album_id=a.id ) }}'>Edit</a> | 
-								<a href='{{url_for('deleteAlbum', collection_id = collection.id, album_id=a.id ) }}'>Delete</a>
-							</div>
-							<div class="col-sm-6 text-right">
+							<div class="col-sm-12 text-right">
 								<a href='{{url_for('albumJSON', collection_id = collection.id, album_id=a.id)}}'>JSON</a> or
 								<a href='{{url_for('albumATOM', collection_id = collection.id, album_id=a.id)}}'>Atom</a>
 							</div>
@@ -93,7 +65,7 @@
 					</div>
 				{% endfor %}
 			</div>
-			<div class="col-sm-1"></div>
+			<div class="col-md-1"></div>
 		</div>
 	{% endif %}
 {% endblock %}
