--- a/templates/publicCollections.html
+++ b/templates/publicCollections.html
@@ -1,17 +1,15 @@
 {% extends "main.html" %}
+{% block atom_feed %}
+	<link href="collections.xml" type="application/atom+xml" rel="alternate" title="Collections ATOM Feed" />
+{% endblock %}
 {% block content %}
-	<div class="row top-menu">
-		<div class="col-md-10"></div>
-		<div class="col-md-2 text-right">
-			<a href="{{url_for('showLogin')}}">Click Here to Log in</a>
-		</div>
-	</div>
+{% include "header.html" %}
 	<div class="row divider blue">
-		<div class="col-md-12"></div>
+		<div class="col-sm-12"></div>
 	</div>
 	<div class="row banner main">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
+		<div class="col-sm-1"></div>
+		<div class="col-sm-11 padding-none">
 			<h1>Music Collections</h1>
 		</div>
 	</div>
@@ -26,22 +24,21 @@
         {% endif %}
     {% endwith %}
 	</div>
-
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-10 padding-none">
-			
+		<div class="row">
+		<div class="col-sm-12 text-right">
+			<p>Available Endpoints: <a href="{{url_for('collectionsJSON')}}">JSON</a> or
+			<a href="{{url_for('collectionsATOM')}}">Atom</a></p>
 		</div>
-		<div class="col-md-1"></div>
 	</div>
+	<div class="row padding-top padding-bottom"></div>
 	{% for collection in collections %}
 		<a href = "{{url_for('indexAlbums', collection_id = collection.id)}}">
 			<div class="row">
-				<div class="col-md-1"></div>
-					<div class="col-md-10 collection-list">
+				<div class="col-sm-1"></div>
+					<div class="col-sm-10 collection-list">
 						<h3>{{collection.name}}</h3>
 					</div>
-				<div class="col-md-1"></div>
+				<div class="col-sm-1"></div>
 			</div>
 		</a>
 	{% endfor %}
